# Semestralka_POS_Cmake

./: CMakeLists.txt  README.md
Semestralka_POS_Cmake/: CMakeLists.txt  Hrac.cpp  Hrac.h  Klient.cpp  Klient.h  Panacik.cpp  Panacik.h  Semestralka_POS_Cmake.cpp  Semestralka_POS_Cmake.h  Server.cpp  Server.h  Sockety.cpp  Sockety.h
